apps/maybe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybe
  namespace: maybe
spec:
  selector:
    app: maybe
  ports:
  - port: 80
    targetPort: 3000
