apps/maybe/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybe
  namespace: maybe
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: maybe
      port:
        number: 80
  tls:
  - hosts:
    - maybe
